[gd_scene load_steps=2 format=2]

[ext_resource path="res://exercicio2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="caixa1" type="LineEdit" parent="."]
margin_left = 27.0
margin_top = 65.0
margin_right = 180.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="caixa1"]
margin_left = 1.0
margin_top = -46.0
margin_right = 199.0
margin_bottom = -11.0
text = "DIGITE OS ITENS DA SUA LISTA"

[node name="caixa2" type="LineEdit" parent="."]
margin_left = 26.0
margin_top = 163.0
margin_right = 182.0
margin_bottom = 236.0

[node name="caixa3" type="LineEdit" parent="."]
margin_left = 24.0
margin_top = 258.0
margin_right = 183.0
margin_bottom = 328.0

[node name="caixa4" type="LineEdit" parent="."]
margin_left = 23.0
margin_top = 351.0
margin_right = 194.0
margin_bottom = 421.0

[node name="Button" type="Button" parent="."]
margin_left = 26.0
margin_top = 447.0
margin_right = 195.0
margin_bottom = 536.0
text = "EXIBIR LISTA"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 253.0
margin_top = 109.0
margin_right = 916.0
margin_bottom = 452.0

[node name="saida2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 253.0
margin_top = 109.0
margin_right = 908.0
margin_bottom = 439.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
